# green-cover-pipeline

./: .gitignore  LICENSE  README.md  params.py  pyproject.toml  requirements.txt
data/westminster_data/01_data_acquisition_and_preparation/: westminster-mbb.gpkg
data/westminster_data/01_data_acquisition_and_preparation/feature_stacks/: tile-1_fstack.pkl  tile-2_fstack.pkl  tile-3_fstack.pkl  tile-4_fstack.pkl  tile-5_fstack.pkl
data/westminster_data/01_data_acquisition_and_preparation/full_core_features/: full_core_features.rar
data/westminster_data/01_data_acquisition_and_preparation/labelled_tiles/: tile-1.tif  tile-2.tif  tile-3.tif  tile-4.tif  tile-5.tif
data/westminster_data/02_model_training_and_postprocessing/: search_results.joblib
data/westminster_data/02_model_training_and_postprocessing/diagnostic_rasters/: metrics.txt  tile-1_fstack_classification_errors.tif  tile-2_fstack_classification_errors.tif  tile-3_fstack_classification_errors.tif  (+2 more)
data/westminster_data/03_accuracy_assessment_and_result_analysis/: UKCEH_LCM.tif  accuracy_metrics_table.csv  area_boundary.gpkg  confusion_matrix_table.csv  cover_percentage_comparison.csv  sampled_validation_points.gpkg  validation_points.gpkg  westminster_cover_percentages.csv
notebooks/: 01_data_acquisition_and_preparation.ipynb  02_model_training_and_postprocessing.ipynb  03_accuracy_assessment_and_result_analysis.ipynb
notebooks/.ipynb_checkpoints/: 01_data_acquisition_and_preparation-checkpoint.ipynb  03_accuracy_assessment_and_result_analysis-checkpoint.ipynb
src/: assessment_utils.py  feature_generation.py  inference.py  model_train.py  model_utils.py  params_search.py  postprocessing.py  utils.py
(+104 files in other folders)
